--- a/backend/services/auth/.env
+++ b/backend/services/auth/.env
@@ -1,8 +1,13 @@
+# Apunta a la BD correcta (auth-db) y usa la variable correcta
+DATABASE_URL="mysql+pymysql://root:${AUTH_DB_ROOT_PASSWORD}@auth-db:3306/auth_transafe"
 
-DATABASE_URL="mysql+pymysql://root:root@localhost:3306/auth_transafe"
-SECRET_KEY="tu_clave_secreta_generada_aqui"
-ALGORITHM="HS256"
+# ¡LAS VARIABLES QUE FALTABAN!
+# (Pydantic las necesita. Asegúrate de que los nombres
+# coincidan con tu docker-compose.yml y tu .env raíz)
+SECRET_KEY=${SECRET_KEY}
+ALGORITHM=${ALGORITHM}
+
+# Variables de la app
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
-
 DEBUG=False
