--- a/backend/services/transacciones/.env
+++ b/backend/services/transacciones/.env
@@ -1,8 +1,11 @@
+# URL para que el CONTENEDOR se conecte a la BD
+DATABASE_URL="mysql+pymysql://root:${TRANS_DB_ROOT_PASSWORD}@trans-db:3306/transaccion_transafe"
 
-DATABASE_URL="mysql+pymysql://root:root@localhost:3306/transaccion_transafe"
-SECRET_KEY="tu_clave_secreta_generada_aqui"
-ALGORITHM="HS256"
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
+# URL para que el CONTENEDOR se conecte a RabbitMQ
+RABBITMQ_URL="amqp://guest:guest@rabbitmq:5672/"
+
+# Variables de JWT que Pydantic necesita
+SECRET_KEY=${SECRET_KEY}
+ALGORITHM=${ALGORITHM}
 
 DEBUG=False
