--- a/backend/services/transacciones/alembic.ini
+++ b/backend/services/transacciones/alembic.ini
@@ -69,7 +69,7 @@ prepend_sys_path = .
 # path_separator = space
 # path_separator = newline
 #
-# Use os.pathsep. Default configuration used for new projects. 
+# Use os.pathsep. Default configuration used for new projects.
 path_separator = os
 
 # set to 'true' to search source files recursively
@@ -84,8 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = mysql+pymysql://root:root@localhost:3308/auth_transafe
-
+sqlalchemy.url = mysql+pymysql://root:root@trans-db:3306/transaccion_transafe
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
