conexion con rabbit estable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,66 @@
-
 services:
   # --- 1. Bases de Datos ---
   auth-db:
     image: mysql:8.0
     container_name: auth-db
     environment:
-      # Lee las variables del archivo .env en la raíz
       MYSQL_ROOT_PASSWORD: ${AUTH_DB_ROOT_PASSWORD} 
-      MYSQL_DATABASE: auth_transafe # Tu nombre de BD
+      MYSQL_DATABASE: auth_transafe
     ports:
-      - "3308:3306" # Mapea el puerto de tu PC al contenedor
+      - "3308:3306"
     volumes:
-      - auth-db-data:/var/lib/mysql # Persiste los datos
+      - auth-db-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${AUTH_DB_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   trans-db:
     image: mysql:8.0
     container_name: trans-db
     environment:
       MYSQL_ROOT_PASSWORD: ${TRANS_DB_ROOT_PASSWORD}
-      MYSQL_DATABASE: transaccion_transafe # Tu nombre de BD
+      MYSQL_DATABASE: transaccion_transafe
     ports:
-      - "3307:3306" # Usa el puerto 3307 en tu PC para evitar colisión
+      - "3307:3306"
     volumes:
       - trans-db-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${TRANS_DB_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # --- 2. Broker de Mensajería ---
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
     ports:
-      - "5672:5672"  # Puerto de la aplicación
-      - "15672:15672" # Panel de administración web
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # --- 3. Microservicios de Backend ---
   auth_service:
     build:
-      context: ./backend/services/auth # Ruta al Dockerfile
+      context: ./backend/services/auth
       dockerfile: DockerFile
     container_name: auth_service
-    env_file: ./backend/services/auth/.env # Carga el .env del servicio
+    env_file: ./backend/services/auth/.env
     environment:
-      # Inyecta los secretos desde el .env raíz
       - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=${ALGORITHM}
       - AUTH_DB_ROOT_PASSWORD=${AUTH_DB_ROOT_PASSWORD}
     ports:
-      - "8000:8000" # Acceso en http://localhost:8000
+      - "8000:8000"
     depends_on:
-      - auth-db # No inicies hasta que la BD esté lista
+      auth-db:
+        condition: service_healthy
 
   transactions_service:
     build:
@@ -56,30 +69,34 @@ services:
     container_name: transactions_service
     env_file: ./backend/services/transacciones/.env
     environment:
-      # Inyecta los secretos
       - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=${ALGORITHM}
       - TRANS_DB_ROOT_PASSWORD=${TRANS_DB_ROOT_PASSWORD}
     ports:
-      - "8001:8001" # Acceso en http://localhost:8001
+      - "8001:8001"
+    volumes:
+      - ./backend/services/transacciones:/app
     depends_on:
-      - trans-db
-      - rabbitmq
+      trans-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
 
   fraud_service:
     build:
       context: ./backend/services/fraud_service
       dockerfile: DockerFile
     container_name: fraud_service
-    env_file: ./backend/services/fraud_service/.env # Carga su .env con las URLs
+    env_file: ./backend/services/fraud_service/.env
+    volumes:
+      - ./backend/services/fraud_service:/app
     depends_on:
-      - rabbitmq             # Debe esperar a RabbitMQ
-      - transactions_service # y al servicio que va a llamar
-
+      rabbitmq:
+        condition: service_healthy
+      transactions_service:
+        condition: service_started
 
 # --- Volúmenes ---
-# Define los volúmenes para que los datos de la BD sobrevivan
-# si borras los contenedores.
 volumes:
   auth-db-data:
   trans-db-data:
