--- a/backend/services/auth/alembic.ini
+++ b/backend/services/auth/alembic.ini
@@ -1,5 +1,5 @@
 # A generic, single database configuration.
-
+ 
 [alembic]
 # path to migration scripts.
 # this is typically a path given in POSIX (e.g. forward slashes)
@@ -84,8 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = mysql+pymysql://root:root@localhost:3308/auth_transafe
-
+sqlalchemy.url = mysql+pymysql://root:root@auth-db:3306/auth_transafe
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
